--- a/fineroof/app/template/css/style.css
+++ b/fineroof/app/template/css/style.css
@@ -1186,6 +1186,10 @@ a {
   }
 }
 
+.header__logo:hover::before, .header__logo:hover::after {
+  opacity: 1;
+}
+
 .header__logo::before, .header__logo::after {
   content: '';
   width: 0;
@@ -1193,15 +1197,15 @@ a {
   border-style: solid;
   position: absolute;
   left: 0;
-  top: 0;
+  top: -1px;
   z-index: 2;
-  opacity: 1;
-  transition: .3s;
+  opacity: 0;
 }
 
 .header__logo::before {
   border-width: 14px 25px 0 0;
   border-color: #232323 transparent transparent transparent;
+  left: 1px;
 }
 
 .header__logo::after {
@@ -1215,7 +1219,7 @@ a {
   opacity: 0;
 }
 
-.header__logo object {
+.header__logo svg {
   width: 50px;
   height: 48px;
 }
@@ -1230,14 +1234,14 @@ a {
   flex-shrink: 0;
 }
 
-.header__image object {
+.header__image svg {
   width: 219px;
   height: 99px;
   pointer-events: none;
 }
 
 @media screen and (max-width: 479px) {
-  .header__image object {
+  .header__image svg {
     width: 156px;
     height: 71px;
     margin-bottom: 33px;
@@ -1425,7 +1429,7 @@ a {
   opacity: 0.6;
 }
 
-.header__map object {
+.header__map svg {
   width: 70px;
   height: 73px;
   z-index: 2;
@@ -1436,14 +1440,14 @@ a {
 }
 
 @media screen and (max-width: 1075px) {
-  .header__map object {
+  .header__map svg {
     width: 67px;
     margin-left: 3px;
   }
 }
 
 @media screen and (max-width: 610px) {
-  .header__map object {
+  .header__map svg {
     margin-right: 0px;
     margin-left: 1px;
   }
@@ -1557,6 +1561,7 @@ a {
 .catalog-slider {
   margin-top: 139px;
   margin-bottom: 220px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1375px) {
@@ -2592,7 +2597,7 @@ a {
   }
 }
 
-.actions__item.jsChannel object,
+.actions__item.jsChannel svg,
 .actions__item.jsChannel .actions__text {
   pointer-events: none;
 }
@@ -2620,10 +2625,6 @@ a {
     padding-left: 0px;
     padding-right: 0;
   }
-}
-
-.actions__item:last-child .actions__icon {
-  margin-left: 40px;
 }
 
 .actions__item:last-child .actions__text {
@@ -2714,7 +2715,7 @@ a {
   margin-bottom: 15px;
 }
 
-.actions__icon object {
+.actions__icon svg {
   width: 138px;
   height: 148px;
 }
@@ -2807,14 +2808,14 @@ a {
   margin-left: 57px;
 }
 
-.gallery__right object {
+.gallery__right svg {
   width: 418px;
   height: 365px;
   pointer-events: inherit;
 }
 
 @media screen and (max-width: 479px) {
-  .gallery__right object {
+  .gallery__right svg {
     width: 100%;
     height: 263px;
   }
